# rust_ai

./: .gitignore  Cargo.toml  README.md
examples/: regression.rs
model/: Dockerfile  docker-compose.yaml
regression/: regression.py
