[package]
name = "rust_tensorflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# tensorflow = "0.21.0"
tensorflow = { version = "0.21.0", features = ["tensorflow_gpu"] }

anyhow = "1.0.94"
tch = "0.18.0"
